--- a/AnimalisAndroid/app/src/main/AndroidManifest.xml
+++ b/AnimalisAndroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.arnauddupeyrat.animalis">
+    package="com.example.arnauddupeyrat.Animalis">
 
     <application
         android:allowBackup="true"
@@ -18,13 +18,13 @@
 
 
         <activity
-            android:name=".FragmentActivityControler"
+            android:name=".View.Activity.FragmentActivityControler"
             android:label="@string/app_name">
         </activity>
 
 
         <activity
-            android:name=".MainActivity"
+            android:name=".View.Activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
